<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/dimen80"
        android:layout_height="@dimen/dimen80"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/dimen20"
        android:src="@drawable/ic_round_apps_start"
        app:civ_border_width="2dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/dialog1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen3"
        android:layout_marginRight="@dimen/dimen3"
        android:layout_toEndOf="@+id/logo"
        android:layout_toRightOf="@+id/logo"
        android:gravity="left|center"
        android:text="@string/about_apps1"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:id="@+id/dialog2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen10"
        android:layout_marginRight="@dimen/dimen10"
        android:layout_below="@id/dialog1"
        android:layout_toEndOf="@+id/logo"
        android:layout_toRightOf="@+id/logo"
        android:gravity="left|center"
        android:layout_marginTop="@dimen/dimen10"
        android:text="@string/about_apps2"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:id="@+id/dialog3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen10"
        android:layout_marginRight="@dimen/dimen10"
        android:layout_toEndOf="@+id/logo"
        android:layout_toRightOf="@+id/logo"
        android:layout_below="@id/dialog2"
        android:gravity="left|center"
        android:text="@string/about_apps3"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:id="@+id/dialog4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog3"
        android:layout_marginLeft="@dimen/dimen10"
        android:layout_marginRight="@dimen/dimen10"
        android:layout_toEndOf="@+id/logo"
        android:layout_toRightOf="@+id/logo"
        android:gravity="left|center"
        android:text="@string/about_apps4"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dialog4"
        android:layout_alignRight="@+id/dialog4"
        android:layout_below="@+id/dialog4"
        android:text="@string/btn_close" />

</RelativeLayout>